# math-problem-generator

./: .flake8  .pre-commit-config.yaml  README.md  demo.py  python-package.yml  requirements-dev.txt  setup.cfg
.github/workflows/: python-package.yml  python-publish.yml
src/: setup.py
src/math_problem_generator/: generator.py
src/tests/: test_get_result.py  test_simple_problems.py
tests/: test_matrix_problems.py  test_missing_number_problems.py  test_simple_problems.py  test_simple_solution.py
tests/json/: matrix_math_problem_add.json  matrix_math_problem_div.json  matrix_math_problem_mul.json  matrix_math_problem_sub.json  missing_number_problem_add.json  missing_number_problem_div.json  missing_number_problem_mul.json  missing_number_problem_sub.json  simple_math_problem_add.json  simple_math_problem_div.json  simple_math_problem_mul.json  simple_math_problem_sub.json
