[metadata]
name = math-problem-generator
version = 0.0.3
author = Tobias Balle-Petersen
author_email = tobiasbp@gmail.com
description = A package for generating math problems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tobiasbp/math-problem-generator
project_urls =
    Bug Tracker = https://github.com/tobiasbp/math-problem-generator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
